# tg-stickerize

./: .env.example  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  README.md  README_EN.md  compose.yaml
.github/workflows/: ci-goreleaser.yml  ci.yml  release-re.yml  release.yml
src/: handlers.rs  main.rs  processors.rs  state.rs
