[package]
name = "tg-stickerize"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
teloxide = { version = "0.15", features = ["macros"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
image = "0.25"
reqwest = { version = "0.12", features = ["json", "stream"] }
tempfile = "3.20"
log = "0.4"
pretty_env_logger = "0.5"
infer = "0.19"
dptree = "0.3"
dotenv = "0.15"
serde_json = "1.0"
